feat: :sparkles: deposito retorna saldo da conta ao efetuar um saque
